...
        android:alpha="0"
        android:translationY="50dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/tabBar"
        android:background="@drawable/separator_line" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
