...
            android:text="@string/login_get_started"
            app:initialCornerAngle="21dp"
            app:spinning_bar_color="@color/background_base"
            app:spinning_bar_padding="8dp" />

        <Button
            android:id="@+id/showLoginBtn"
            style="@style/Button.Three"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="@dimen/activity_margin"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
...
