...
        android:id="@+id/loginFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/loginBtn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
...
